Fixed height overflows on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,9 +7,11 @@
 html {
 	font-family: sans-serif;
 	margin: 0;
+	overflow-y: hidden;
 }
 body {
 	margin: 0;
+	overflow-y: hidden;
 }
 .oloz-header, .oloz-footer {
 	position: fixed;
